--- a/css/styles.css
+++ b/css/styles.css
@@ -10112,3 +10112,54 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+
+
+/*extraa*/
+
+
+
+/*Footer*/
+footer{
+	margin-top: 150px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content:center;
+	height: 400px;
+	width: 100%;
+	background-color: #E8EAED;
+
+}
+
+.tecnologiasUsadas{
+  margin-top: 60px;
+	align-self: flex-end;
+	border-top: 1px solid black;
+	width: 90%;
+	height: 100px;
+}
+
+.container-imgstec{
+	width:100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+.container-imgstec img{
+	margin: 10px;
+	width:35px;
+	height:35px;
+	object-fit: contain;
+
+}
+
+.infofooter{
+	margin-top: 60px;
+	width: 90%;
+	height: 200px;
+
+}
+.infofooter a{
+	margin: 10px;
+	display: block;
+}
+
